--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,26 @@ jobs:
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@v4.5.0
       with:
-        token: ${{ secrets.TOKEN_GITHUB }}
-        ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
+        # token: ${{ secrets.TOKEN_GITHUB }}
+        # ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
         branch: gh-pages
         folder: dist
+  deploy:
+    # Chờ "build" xong mới chạy "deploy"
+    needs: build
+
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
