--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "vitepress": "^1.3.4",
     "vue": "^3.4.29",
     "vue-qrcode-reader": "^5.5.10",
     "vue-router": "^4.3.3"
