--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "html5-qrcode": "^2.1.5",
     "pinia": "^2.1.7",
     "vitepress": "^1.3.4",
     "vue": "^3.4.29",
