--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "html5-qrcode": "^2.1.5",
+    "jsqr": "^1.4.0",
     "pinia": "^2.1.7",
     "vitepress": "^1.3.4",
     "vue": "^3.4.29",
