--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "html5-qrcode": "^2.1.5",
     "jsqr": "^1.4.0",
     "pinia": "^2.1.7",
+    "sass": "^1.79.4",
     "vitepress": "^1.3.4",
     "vue": "^3.4.29",
     "vue-qrcode-reader": "^5.5.10",
