--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sass": "^1.79.4",
     "vitepress": "^1.3.4",
     "vue": "^3.4.29",
+    "vue-final-modal": "^4.5.5",
     "vue-qrcode-reader": "^5.5.10",
     "vue-router": "^4.3.3"
   },
